--- a/src/public/css/productdetail.css
+++ b/src/public/css/productdetail.css
@@ -545,7 +545,6 @@ a {
         align-items: center;
         font-size: 16px;
         text-align: justify;
-        margin-top: 5px;
         font-weight: 100;
         font-style: italic;
     }
@@ -556,6 +555,8 @@ a {
 
 }
 
-@media(min-width:1279px) {
-    
+@media(min-width:1024px) {
+    #containerPriceAndShipping {
+        margin: -25px 0px 120px 6px;
+    }
 }
