--- a/src/public/css/footer.css
+++ b/src/public/css/footer.css
@@ -189,6 +189,13 @@
         color: var(--purpuraInsta);
         font-size: 30px;
         margin-right: 10px;
+        width: 15%;
+    }
+
+    .logoInstagram {
+        width: 110%;
+        height: 80%;
+        margin-top: 3px;
     }
 
     /*End Footer*/
@@ -209,6 +216,10 @@
         background-color: var(--grisClaro);
         padding: 25px 70px 25px 70px;
     }
+
+    .iconsSocialNetworksInsta {
+        width: 10%;
+
 }
 
 @media(min-width:1440px) {
@@ -222,4 +233,18 @@
     .containerPhone {
         align-items: center;
     }
+
+    .iconsSocialNetworksInsta {
+        color: var(--purpuraInsta);
+        font-size: 30px;
+        margin-right: 10px;
+        width: 7%;
+    }
+
+    .logoInstagram {
+        width: 110%;
+        height: 80%;
+        margin-top: 3px;
+    }
+
 }
