--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -112,7 +112,8 @@
             </div>
             <div class="contenedorIconsSocialNetworks">
                 <div class="iconsSocialNetworks"><i class="fab fa-facebook-square"></i></div>
-                <div class="iconsSocialNetworksInsta"><i class="fab fa-instagram-square"></i></div>
+                <!--<div class="iconsSocialNetworksInsta"><i class="fab fa-instagram-square"></i></div>-->
+                <div class="iconsSocialNetworksInsta"><img class="logoInstagram" src="/images/footer/instagram-2-1.svg" alt="logoInstagram" ></div>
                 <div class="iconsSocialNetworks"><i class="fab fa-twitter-square"></i></div>
                 <div class="iconsSocialNetworks"><i class="fab fa-youtube-square"></i></div>
                 <div class="iconsSocialNetworks"><i class="fab fa-pinterest-square"></i></div>
